<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="hanime_app_name" translatable="false" tools:ignore="Typos">Han1meViewer</string>
    <string name="home_page">首頁</string>
    <string name="h_anime">H動漫</string>
    <string name="latest_hanime">最新裏番</string>
    <string name="fresh">新鮮</string>
    <string name="latest_upload">最新上傳</string>
    <string name="this_month">本月</string>
    <string name="hot_video">發燒影片</string>
    <string name="current">當下</string>
    <string name="hot_video_2">熱門影片</string>
    <string name="trends">動態</string>
    <string name="they_watched">他們在看</string>
    <string name="search">搜尋</string>
    <string name="advanced_search">高級搜尋</string>
    <string name="back">返回</string>
    <string name="input_keyword">請輸入關鍵字</string>
    <string name="type">類型</string>
    <string name="tag">標籖</string>
    <string name="sort_option">排序方式</string>
    <string name="brand">品牌</string>
    <string name="release_date">發佈日期</string>
    <string name="duration">片長</string>
    <string name="duration_able_reset">片長（複選可取消）</string>
    <string name="type_able_reset">類型（複選可取消）</string>
    <string name="sort_option_able_reset">排序方式（複選可取消）</string>
    <string name="cancel_all_tags">取消所有tag</string>
    <string name="alert">提示</string>
    <string name="alert_cancel_all_tags">確認將會取消你所選的所有Tag</string>
    <string name="confirm">確認</string>
    <string name="cancel">取消</string>
    <string name="content_tag">內容標籤</string>
    <string name="pair_widely">廣泛配對</string>
    <string name="pair_widely_alert">較多結果，較不精準。配對所有包含任何一個選擇的標籤的影片，而非全部標籤</string>
    <string name="reset">重設</string>
    <string name="save">保存</string>
    <string name="save_and_search">保存並搜尋</string>
    <string name="video_attr">影片屬性</string>
    <string name="relationship">人物關係</string>
    <string name="characteristics">角色設定</string>
    <string name="appearance_and_figure">外貌身材</string>
    <string name="story_plot">故事劇情</string>
    <string name="sex_position">性交體位</string>
    <string name="reset_date">重設日期</string>
    <string name="copy_to_clipboard">已複製到剪貼簿</string>
    <string name="introduction">簡介</string>
    <string name="comment">評論</string>
    <string name="collapse">收起</string>
    <string name="expand">展開</string>
    <string name="series_video">系列影片</string>
    <string name="related_video">相關影片</string>
    <string name="now_playing">現正播放</string>
    <string name="view_more_replies">查看更多回覆</string>
    <string name="comment_not_found">未發現評論</string>
    <string name="hanime_list">新番列表</string>
    <string name="latest_hanime_tour">新番導覽</string>
    <string name="latest_hanime_list_monthly">%s 裏番新番列表</string>
    <string name="latest_hanime_news">新番資訊</string>
    <string name="latest_hanime_comment">%s 新番評論區</string>
    <string name="my_list">我的清單</string>
    <string name="watch_later">稍後觀看</string>
    <string name="fav_video">喜歡的影片</string>
    <string name="settings">設定</string>
    <string name="video">影片</string>
    <string name="download">下載</string>
    <string name="watch_history">觀看歷史</string>
    <string name="login">登入</string>
    <string name="delete">刪除</string>
    <string name="here_is_empty">這裡空空的…</string>
    <string name="play_list">播放清單</string>
    <string name="add_to_fav">加入喜歡</string>
    <string name="share">分享</string>
    <string name="add_to_watch_later">加入待看</string>
    <string name="video_language">影片語言</string>
    <string name="preference">偏好</string>
    <string name="other">其他</string>
    <string name="about">關於</string>
    <string name="check_update">檢查更新</string>
    <string name="new_version_found">已發現新版本</string>
    <string name="checking_update">檢查更新中…</string>
    <string name="update_content">更新內容</string>
    <string name="check_update_failed">檢查更新失敗，點擊重試</string>
    <string name="check_update_success">當前有新版本：%s，點擊查看</string>
    <string name="current_version">當前版本：%s</string>
    <string name="already_latest_update">已經是最新版本！</string>
    <string name="app_slogan">非官方 Hanime1.me 用戶端</string>
    <string name="search_placeholder">今天想看點什麼呢</string>
    <string name="downloading">正在下載</string>
    <string name="downloading_s">正在下載：%1$s</string>
    <string name="downloading_update_percent">正在下載更新 %d%%</string>
    <string name="downloaded">已下載</string>
    <string name="start_download">開始下載</string>
    <string name="cancel_download">取消下載</string>
    <string name="local_playback">本地觀看</string>
    <string name="download_path">下載路徑</string>
    <string name="help">幫助</string>
    <string name="reply">回覆</string>
    <string name="reply_child_comment">回覆子評論</string>
    <string name="comment_video">評論本影片</string>
    <string name="login_first">請先登入</string>
    <string name="reply_warning">（輸入欄消失後輸入文字也會消失）</string>
    <string name="clear_cache">清除快取</string>
    <string name="cache_occupy">快取佔用</string>
    <string name="cache_usage_summary"><![CDATA[目前佔用了 <b>%1$s</b> 的儲存空間]]></string>
    <string name="allow">允許</string>
    <string name="deny">拒絕</string>
    <string name="no_video_links_found">未發現影片連結</string>
    <string name="child_comment">子評論</string>
    <string name="search_options_tips">長按某單元可以清除當前你所選單元的所有Tag</string>
    <string name="pause">暫停</string>
    <string name="continues">繼續</string>
    <string name="jump_to_webpage">轉到網頁</string>
    <string name="sure_to_delete_s">確定要刪除 %s 嗎？</string>
    <string name="sure_to_delete">確定要刪除嗎？</string>
    <string name="prepare_to_delete_s">你現在正要準備刪除\n%s</string>
    <string name="playlist_title">標題</string>
    <string name="playlist_description">介紹</string>
    <string name="open_playlist_drawer">打開播放清單列表</string>
    <string name="add_to_playlist">加入清單</string>
    <string name="player_settings">播放器設定</string>
    <string name="current_slide_sensitivity">當前靈敏度：%s</string>
    <string name="network">網路</string>
    <string name="safe_dns">安全 DNS</string>
    <string name="proxy">代理</string>
    <string name="host_or_ip">Host 或 IP</string>
    <string name="port">埠</string>
    <string name="direct">直接連接</string>
    <string name="system_proxy">系統代理</string>
    <string name="http" translatable="false">HTTP</string>
    <string name="http_proxy" translatable="false">HTTP %1$s:%2$d</string>
    <string name="socks" translatable="false">SOCKS</string>
    <string name="socks_proxy" translatable="false">SOCKS %1$s:%2$d</string>
    <string name="host_or_ipv4">Host 或 IPv4</string>
    <string name="sort_by_date_ascending">時間正排序</string>
    <string name="sort_by_date_descending">時間反排序</string>
    <string name="sort_by_alphabet_ascending">字母正排序</string>
    <string name="sort_by_alphabet_descending">字母反排序</string>
    <string name="h_keyframe_settings">關鍵H幀設定</string>
    <string name="h_keyframes_enable">關鍵H幀，啟動！</string>
    <string name="h_keyframes_enable_tip">該功能關閉後並不會刪除你的歷史資料</string>
    <string name="h_keyframes_disable_tip">開啟後，播放器頂部會顯示🥵</string>
    <string name="h_keyframe_title_prefix">影片代號：</string>
    <string name="manage">管理</string>
    <string name="h_keyframe_manage">關鍵H幀管理</string>
    <string name="h_keyframe">關鍵H幀</string>
    <string name="when_countdown_remind">何時開始倒數計時提醒</string>
    <string name="show_prompt_when_countdown">倒數計時顯示提示</string>
    <string name="will_remind_before_d_seconds">將會在 %d 秒前倒數計時提醒</string>
    <string name="shared_h_keyframes_enable">採用共享關鍵H幀集</string>
    <string name="shared_h_keyframe_manage">共享關鍵H幀管理</string>
    <string name="shared_h_keyframe_manage_tip">歡迎到 GitHub 上面提交你的關鍵H幀，如果不會提交，討論區有教學文供參考</string>
    <string name="shared_h_keyframes_enable_tip">採用好心人上傳到 Github 的關鍵H幀集</string>
    <string name="shared">共享</string>
    <string name="shared_h_keyframes_use_first">優先採用共享關鍵H幀集</string>
    <string name="shared_h_keyframes_use_first_tip">當共享集和本地集都存在某一影片的關鍵H幀時，優先採用共享集</string>
    <string name="forum">討論區</string>
    <string name="forum_summary">歡迎來吐槽，如果有重要資訊也會發佈到這裡</string>
    <string name="submit_bug">提交 BUG</string>
    <string name="submit_bug_summary">出 BUG 了就來提交個 issue 吧</string>
    <string name="position_ms">位置 (ms)</string>
    <string name="prompt">提示</string>
    <string name="modify_h_keyframe">修改關鍵H幀</string>
    <string name="edit">修改</string>
    <string name="title">標題</string>
    <string name="video_code">影片代號</string>
    <string name="copy_">複製</string>
    <string name="add">添加</string>
    <string name="h_keyframes_shared_by_other_detected">檢測到他人分享的關鍵H幀</string>
    <string name="h_keyframes_shared_by_other_not_detected">未檢測到他人分享的關鍵H幀</string>
    <string name="share_to_others">分享給其他人</string>
    <string name="latest_release">最新上市</string>
    <string name="chinese_subtitle">中文字幕</string>
    <string name="ranking_today">本日排行</string>
    <string name="ranking_this_month">本月排行</string>
    <string name="long_press_speed_not_supported">您的設備暫時不支援長按快轉</string>
    <string name="start_all">全部開始</string>
    <string name="pause_all">全部暫停</string>
    <string name="domain_name">域名</string>
    <string name="use_built_in_hosts">應用內建 Hosts</string>
    <string name="network_settings">網路設定</string>
    <string name="use_built_in_hosts_summary">應用提供的主機到 IP 的映射\nVPN？那是什麼？</string>
    <string name="username">帳號</string>
    <string name="password">密碼</string>
    <string name="try_login_here">試試在這裡登入</string>
    <string name="email">電子郵件</string>
    <string name="login_failed">登入失敗</string>
    <string name="login_success">登入成功</string>
    <string name="account_or_password_wrong">帳號或密碼可能錯誤</string>
    <string name="login_tips">該方法只能保持登入 2 個小時… 還是推薦使用網頁登入，\n但網頁是不走 Hosts 的，所以可能需要 VPN</string>
    <string name="ignore">忽略</string>
    <string name="update">更新</string>
    <string name="use_ci_update_channel">使用 CI 更新通道。</string>
    <string name="use_ci_update_channel_summary">CI 更新頻道能更快地取得最新變更\n但不保證穩定性</string>
    <string name="update_popup_interval_days">檢查更新跳出視窗間隔天數</string>
    <string name="update_failed">更新失敗</string>
    <string name="update_download_background">在背景下載更新</string>
    <string name="allow_install_from_unknown_app_sources">允許當前 App 來源安裝</string>
    <string name="reason_for_allow_install_from_unknown_app_sources">不用擔心，這只是為了更新。\n你如果不放心，可以直接去 Github 上下載</string>
    <string name="go_to_settings">前往設定</string>
    <string name="allow_post_notification">允許發送通知</string>
    <string name="reason_for_download_notification">請同意通知權限，及時收到下載訊息！</string>
    <string name="msg_deny_download_notification">進行或完成時不會通知哦</string>
    <string name="at_any_time">隨時</string>
    <string name="which_days">%d天</string>
    <string name="last_update_popup_check_time">最近更新視窗跳出時刻：\n%s</string>
    <string name="no_update_popup_yet">最近還沒跳出過更新視窗哦</string>
    <string name="no_description">您似乎還沒有寫介紹…</string>
    <string name="share_to_others_tip">複製以下內容，分享給其他人，可以透過頂部右側添加按鈕來將其存入設備：\n%s</string>
    <string name="delete_playlist">刪除播放清單</string>
    <string name="delete_the_playlist">刪除該播放清單</string>
    <string name="s_copy_to_clipboard">「%1$s」已複製到剪貼簿</string>
    <string name="detect_ha1_related_link_in_clipboard">檢測到剪貼簿裡存在Hanime1相關連結</string>
    <string name="enter">進入</string>
    <string name="sure_to_logout">你確定要登出嗎？</string>
    <string name="sure">是的</string>
    <string name="no">不要</string>
    <string name="not_logged_in">未登入</string>
    <string name="modify_success">修改成功</string>
    <string name="modify_title_or_desc">修改標題或介紹</string>
    <string name="fail_to_get_video_link">無法取得該影片的播放連結，將會跳轉瀏覽器</string>
    <string name="delete_success">刪除成功</string>
    <string name="video_might_not_exist">該影片可能不存在</string>
    <string name="video_not_exist">該影片不存在</string>
    <string name="add_to_h_keyframe">加入關鍵H幀</string>
    <string name="sure_to_add_to_h_keyframe">確定要將當前時刻加入關鍵H幀嗎？</string>
    <string name="current_position_d_ms">當前時刻：%dms</string>
    <string name="pause_then_long_press">先暫停再長按</string>
    <string name="custom">自訂</string>
    <string name="download_count_limit">同時下載數量限制</string>
    <string name="download_speed_limit">下載速度限制</string>
</resources>